북괴 관련 추가

--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -1,3 +1,7 @@
+e_north_korea;Democratic People's Republic of Korea;;;;;;;;;;;;;x
+e_north_korea_adj;North Korean;;;;;;;;;;;;;x
+e_south_korea;Republic of Korea;;;;;;;;;;;;;x
+e_south_korea_adj;South Korean;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
 c_seoul;Seoul;;;;;;;;;;;;;x
