--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -101,7 +101,7 @@ PROV100;Deokjin;;;;;;;;;;;;;x
 PROV101;Wanju;;;;;;;;;;;;;x
 PROV102;Taein;;;;;;;;;;;;;x
 PROV103;Jiri;;;;;;;;;;;;;x
-PROV104;sinan;;;;;;;;;;;;;x
+PROV104;Jido;;;;;;;;;;;;;x
 PROV105;Heuksan;;;;;;;;;;;;;x
 PROV106;Gogun;;;;;;;;;;;;;x
 PROV107;Cheongju;;;;;;;;;;;;;x
