병신같은오류 수정

--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -10,6 +10,18 @@ e_yalu;Yalu;;;;;;;;;;;;;x
 e_yalu_adj;Yalu;;;;;;;;;;;;;x
 e_joseon;Joseon;;;;;;;;;;;;;x
 e_joseon_adj;Joseon;;;;;;;;;;;;;x
+k_manchuria;Manchuria;;;;;;;;;;;;;x
+k_manchuria_adj;Manchu;;;;;;;;;;;;;x
+k_liaoning;Liaoning;;;;;;;;;;;;;x
+k_liaoning_adj;Liaoning;;;;;;;;;;;;;x
+k_gyeonggi;Gyeongggi;;;;;;;;;;;;;x
+k_gyeonggi_adj;Gyeongggi;;;;;;;;;;;;;x
+k_pyeongan;Phyong'an;;;;;;;;;;;;;x
+k_pyeongan_adj;Phyong'an;;;;;;;;;;;;;x
+k_hamgyeong;Hamgyeong;;;;;;;;;;;;;x
+k_hamgyeong_adj;Hamgyeong;;;;;;;;;;;;;x
+k_jeolla;Jeolla;;;;;;;;;;;;;x
+k_jeolla_adj;Jeolla;;;;;;;;;;;;;x
 k_sinan;Sinan;;;;;;;;;;;;;x
 k_sinan_adj;Sinan;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
