--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -173,7 +173,7 @@ PROV172;Dongducheon;;;;;;;;;;;;;x
 PROV173;Yeoncheon;;;;;;;;;;;;;x
 PROV174;Pungsan;;;;;;;;;;;;;x
 PROV175;Kaesong;;;;;;;;;;;;;x
-PROV176;Kaephung;;;;;;;;;;;;;x
+PROV176;Jangdan;;;;;;;;;;;;;x
 PROV177;Cheongpyeong;;;;;;;;;;;;;x
 PROV178;Yeongdeungpo;;;;;;;;;;;;;x
 PROV179;Gangnam;;;;;;;;;;;;;x
@@ -510,3 +510,6 @@ PROV509;Jimo;;;;;;;;;;;;;x
 PROV510;Pingdu;;;;;;;;;;;;;x
 PROV511;Laixi;;;;;;;;;;;;;x
 PROV512;Tsushima;;;;;;;;;;;;;x
+PROV513;Xingcheng;;;;;;;;;;;;;x
+PROV514;Shenyang;;;;;;;;;;;;;x
+PROV515;Changhai;;;;;;;;;;;;;x
