--- a/Falen/localisation/fal_religions.csv
+++ b/Falen/localisation/fal_religions.csv
@@ -12,3 +12,4 @@ mahayana;Mahayana;;;;;;;;;;;;;x
 gaian;Gaian;;;;;;;;;;;;;x
 koreanist;Koreanist;;;;;;;;;;;;;x
 juche;Juche;;;;;;;;;;;;;x
+GOD_SURYONG;Suryong;;;;;;;;;;;;;x
