--- a/Falen/localisation/faltitles_baronies.csv
+++ b/Falen/localisation/faltitles_baronies.csv
@@ -1,2 +1,7 @@
 b_rangrim;Rangrim;;;;;;;;;;;;;x
 b_mokpo;Mokpo;;;;;;;;;;;;;x
+b_jongno;Jongno;;;;;;;;;;;;;x
+b_eulji;Eulji;;;;;;;;;;;;;x
+b_myeongdong;Myeongdong;;;;;;;;;;;;;x
+b_yongsan;Yongsan;;;;;;;;;;;;;x
+b_itaewon;Itaewon;;;;;;;;;;;;;x
