--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -142,7 +142,7 @@ PROV141;Pyeongtaek;;;;;;;;;;;;;x
 PROV142;Anseong;;;;;;;;;;;;;x
 PROV143;Icheon;;;;;;;;;;;;;x
 PROV144;Yeoju;;;;;;;;;;;;;x
-PROV145;Gwaseong;;;;;;;;;;;;;x
+PROV145;Hwaseong;;;;;;;;;;;;;x
 PROV146;Osan;;;;;;;;;;;;;x
 PROV147;Suwon;;;;;;;;;;;;;x
 PROV148;Yongin;;;;;;;;;;;;;x
