--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -24,6 +24,18 @@ k_jeolla;Jeolla;;;;;;;;;;;;;x
 k_jeolla_adj;Jeolla;;;;;;;;;;;;;x
 k_sinan;Sinan;;;;;;;;;;;;;x
 k_sinan_adj;Sinan;;;;;;;;;;;;;x
+k_gyeongsang;Gyeongsang;;;;;;;;;;;;;x
+k_gyeongsang_adj;Gyeongsang;;;;;;;;;;;;;x
+k_jeju;Jeju;;;;;;;;;;;;;x
+k_jeju_adj;Jeju;;;;;;;;;;;;;x
+k_primorsky;Primorsky;;;;;;;;;;;;;x
+k_primorsky_adj;Primoriye;;;;;;;;;;;;;x
+k_inner_mongolia;Mongolia;;;;;;;;;;;;;x
+k_inner_mongolia_adj;Mongol;;;;;;;;;;;;;x
+k_mil_seoul;Authorian Seoul;;;;;;;;;;;;;x
+k_mil_seoul_adj;Seoul;;;;;;;;;;;;;x
+k_civil_seoul;Civilian Seoul;;;;;;;;;;;;;x
+k_civil_seoul_adj;Seoul;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
 c_seoul;Seoul;;;;;;;;;;;;;x
