--- a/Falen/localisation/fal_miscs.csv
+++ b/Falen/localisation/fal_miscs.csv
@@ -1,3 +1,5 @@
 RYONGDOJA;Ryongdoja;;;;;;;;;;;;;x
 RYONGDOJA_FOA;Ryongdoja;;;;;;;;;;;;;x
+GOD_SURYONG;Suryong;;;;;;;;;;;;;x
+GOD_JANGGUN;Janggun;;;;;;;;;;;;;x
 nick_salt_emperor;the Salt Emperor;;;;;;;;;;;;;x
