--- a/Falen/localisation/fal_religions.csv
+++ b/Falen/localisation/fal_religions.csv
@@ -12,4 +12,6 @@ mahayana;Mahayana;;;;;;;;;;;;;x
 gaian;Gaian;;;;;;;;;;;;;x
 koreanist;Koreanist;;;;;;;;;;;;;x
 juche;Juche;;;;;;;;;;;;;x
-GOD_SURYONG;Suryong;;;;;;;;;;;;;x
+maoist;Maoist;;;;;;;;;;;;;x
+holy_spirit;Holy Spirit;;;;;;;;;;;;;x
+atomicist;Atomicist;;;;;;;;;;;;;x
