--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -38,5 +38,19 @@ k_civil_seoul;Civilian Seoul;;;;;;;;;;;;;x
 k_civil_seoul_adj;Seoul;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
+d_gangnam;Gangnam;;;;;;;;;;;;;x
+d_gangnam_adj;Gangnam;;;;;;;;;;;;;x
+d_dongdaemun;Dongdaemun;;;;;;;;;;;;;x
+d_dongdaemun_adj;Dongdaemun;;;;;;;;;;;;;x
+d_seodaemun;Seodaemun;;;;;;;;;;;;;x
+d_dongdaemun_adj;Dongdaemun;;;;;;;;;;;;;x
+d_gaema;Kaema;;;;;;;;;;;;;x
+d_gaema;Kaema;;;;;;;;;;;;;x
+d_pyongyang;Pyongyang;;;;;;;;;;;;;x
+d_pyongyang_adj;Pyongyang;;;;;;;;;;;;;x
+d_sinan;Sinan;;;;;;;;;;;;;x
+d_sinan_adj;Sinan;;;;;;;;;;;;;x
+d_haenam;Haenam;;;;;;;;;;;;;x
+d_haenam_adj;Haenam;;;;;;;;;;;;;x
 c_seoul;Seoul;;;;;;;;;;;;;x
 c_seoul_adj;Seoul;;;;;;;;;;;;;x
