--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -52,5 +52,7 @@ d_sinan;Sinan;;;;;;;;;;;;;x
 d_sinan_adj;Sinan;;;;;;;;;;;;;x
 d_haenam;Haenam;;;;;;;;;;;;;x
 d_haenam_adj;Haenam;;;;;;;;;;;;;x
+d_jeju;Jeju;;;;;;;;;;;;;x
+d_jeju_adj;Jeju;;;;;;;;;;;;;x
 c_seoul;Seoul;;;;;;;;;;;;;x
 c_seoul_adj;Seoul;;;;;;;;;;;;;x
