--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -522,3 +522,4 @@ PROV564;Nakdong;;;;;;;;;;;;;x
 PROV565;Nakdong;;;;;;;;;;;;;x
 PROV566;Nakdong;;;;;;;;;;;;;x
 PROV567;Nakdong;;;;;;;;;;;;;x
+PROV597;Chonji;;;;;;;;;;;;;x
