--- a/Falen/localisation/fal_miscs.csv
+++ b/Falen/localisation/fal_miscs.csv
@@ -1,5 +1,10 @@
 RYONGDOJA;Ryongdoja;;;;;;;;;;;;;x
 RYONGDOJA_FOA;Ryongdoja;;;;;;;;;;;;;x
+PRESIDENT;President;;;;;;;;;;;;;x
+PRESIDENT_FOA;My President;;;;;;;;;;;;;x
 GOD_SURYONG;Suryong;;;;;;;;;;;;;x
 GOD_JANGGUN;Janggun;;;;;;;;;;;;;x
+KINGDOM_PREFIX;Kingdom of;;;;;;;;;;;;;x
+HOUSE; House;;;;;;;;;;;;;x
 nick_salt_emperor;the Salt Emperor;;;;;;;;;;;;;x
+
