--- a/Falen/localisation/fal_miscs.csv
+++ b/Falen/localisation/fal_miscs.csv
@@ -4,6 +4,7 @@ PRESIDENT;President;;;;;;;;;;;;;x
 PRESIDENT_FOA;My President;;;;;;;;;;;;;x
 GOD_SURYONG;Suryong;;;;;;;;;;;;;x
 GOD_JANGGUN;Janggun;;;;;;;;;;;;;x
+GOD_MAITREYA;Maitreya;;;;;;;;;;;;;x
 KINGDOM_PREFIX;Kingdom of;;;;;;;;;;;;;x
 HOUSE; House;;;;;;;;;;;;;x
 nick_salt_emperor;the Salt Emperor;;;;;;;;;;;;;x
