산사람 만듬
ㅇㅇ

--- a/Falen/localisation/faltitles_baronies.csv
+++ b/Falen/localisation/faltitles_baronies.csv
@@ -5,3 +5,4 @@ b_eulji;Eulji;;;;;;;;;;;;;x
 b_myeongdong;Myeongdong;;;;;;;;;;;;;x
 b_yongsan;Yongsan;;;;;;;;;;;;;x
 b_itaewon;Itaewon;;;;;;;;;;;;;x
+k_andong;zhou;;;;;;;;;;;;;x
