--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -36,6 +36,8 @@ k_mil_seoul;Authorian Seoul;;;;;;;;;;;;;x
 k_mil_seoul_adj;Seoul;;;;;;;;;;;;;x
 k_civil_seoul;Civilian Seoul;;;;;;;;;;;;;x
 k_civil_seoul_adj;Seoul;;;;;;;;;;;;;x
+k_bulgukto;Bulgukto;;;;;;;;;;;;;x
+k_bulgukto_adj;Bulgukto;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
 d_gangnam;Gangnam;;;;;;;;;;;;;x
