--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -10,6 +10,8 @@ e_yalu;Yalu;;;;;;;;;;;;;x
 e_yalu_adj;Yalu;;;;;;;;;;;;;x
 e_joseon;Joseon;;;;;;;;;;;;;x
 e_joseon_adj;Joseon;;;;;;;;;;;;;x
+e_donghae_adj;Donghae;;;;;;;;;;;;;x
+e_donghae_adj;Donghae;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
 d_gangnam;Gangnam;;;;;;;;;;;;;x
