--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -11,7 +11,7 @@ e_yalu_adj;Yalu;;;;;;;;;;;;;x
 e_joseon;Joseon;;;;;;;;;;;;;x
 e_joseon_adj;Joseon;;;;;;;;;;;;;x
 e_donghae_adj;Donghae;;;;;;;;;;;;;x
-e_donghae_adj;Donghae;;;;;;;;;;;;;x
+e_donghae_adj;Vostochniy;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
 d_gangnam;Gangnam;;;;;;;;;;;;;x
