--- a/Falen/localisation/kingdom_titles.csv
+++ b/Falen/localisation/kingdom_titles.csv
@@ -34,3 +34,5 @@ k_andong;Ju;;;;;;;;;;;;;x
 k_andong_adj;Andong;;;;;;;;;;;;;x
 k_pohang;Pohang;;;;;;;;;;;;;x
 k_pohang_adj;Pohang;;;;;;;;;;;;;x
+k_people's_republic_of_korea;People's Republic of Korea;;;;;;;;;;;;;x
+k_people's_republic_of_korea_adj;Republican;;;;;;;;;;;;;x
