길림과 만주 2

--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -465,7 +465,7 @@ PROV464;Dongliao;;;;;;;;;;;;;x
 PROV465;Panshi;;;;;;;;;;;;;x
 PROV466;Huadian;;;;;;;;;;;;;x
 PROV467;Yongju;;;;;;;;;;;;;x
-PROV468;Fengman;;;;;;;;;;;;;x
+PROV468;Jilin;;;;;;;;;;;;;x
 PROV469;Jiaohe;;;;;;;;;;;;;x
 PROV470;Shuang'yang;;;;;;;;;;;;;x
 PROV471;Changchun;;;;;;;;;;;;;x
