--- a/Falen_Multibyte/localisation/fal_bloodlines.csv
+++ b/Falen_Multibyte/localisation/fal_bloodlines.csv
@@ -11,7 +11,6 @@ sejong_the_great_desc;8Á…È³UÆ tÇÄ³”² pÈ/ÁXÇ È 4³ m­UÆ<Çk¸hÃ,
 gaian_blood;ÖµÑ;;;;;;;;;;;;;x
 gaian_blood_desc;ÖµÑ;;;;;;;;;;;;;x
 mother_of_nation_blood;m­¨º ÖµÑ;;;;;;;;;;;;;x
-mother_of_nation_blood_desc;pÈ/Á xÇü» õ¬TÖm­ È´ œÍ”¼ tÇÈ, pÈ/ÁOÇ l­8ÁÄ¬XÇ ÉÓ‘ÅtÇ|·”² È¯ü¬ l×İ¹XÇ EµDÇ >ÌDÅ ¨ºxÇ İÀtÈÇä´XÇ 4»¬¹ĞÅÁ œÍ¼ˆÕµÂÈ²ä². kÕÌ¹ÆOÇ ÉÓ‘ÅĞÅ ¨ºxÇ İÀtÈÇä´DÇ tÎ¬¹³ÂÈ¹ ˆÇŒ¬ ÀÉ×ˆÕà¬,üÈÀ¼XÇ İÀtÈÇä´ íÅÜÂ ø­|¹ ÿ»à¬ ¨º„ÇĞÅ 0µ|· kÕÌ¹ÆOÇ pÈ/Á xÇü»õ¬TÖm­XÇ 1³ Í¬¹k¸hÃ pÈ/ÁDÇ tÇL°ÈÅµÂÈ²ä².
-;;;;;;;;;;;;;x
+mother_of_nation_blood_desc;pÈ/Á xÇü» õ¬TÖm­OÇ l­8ÁÄ¬XÇ ÉÓ‘ÅtÇ|·”² È¯ü¬ l×İ¹XÇ EµDÇ >ÌDÅ ¨ºxÇ İÀtÈÇä´XÇ 4»¬¹ĞÅÁ œÍ¼ˆÕµÂÈ²ä². kÕÌ¹ÆOÇ ÉÓ‘ÅĞÅ ¨ºxÇ İÀtÈÇä´DÇ tÎ¬¹³ÂÈ¹ ˆÇŒ¬ ÀÉ×ˆÕà¬,üÈÀ¼XÇ İÀtÈÇä´ íÅÜÂ ø­|¹ ÿ»à¬ ¨º„ÇĞÅ 0µ|· kÕÌ¹ÆOÇ pÈ/Á xÇü»õ¬TÖm­XÇ 1³ Í¬¹k¸hÃ pÈ/ÁDÇ tÇL°ÈÅµÂÈ²ä².;;;;;;;;;;;;;x
 dragon_of_dharma;•¼á¸;;;;;;;;;;;;;x
 dragon_of_dharma_desc;UÆt¬OÇ à¬3¸m­XÇ t¬m­Çk¸, pÈ/ÁĞÅ XÇtÕ xºİ¹XÕ0® ÈL®ÀÉ 500ìÅD± ¬ ,Ì·kÕ ˆ´P­ 8»TÖ|¹ C¯<ÕàÆµÂÈ²ä².;;;;;;;;;;;;;x
