--- a/Falen_Multibyte/localisation/kingdom_titles.csv
+++ b/Falen_Multibyte/localisation/kingdom_titles.csv
@@ -25,11 +25,11 @@ k_mil_seoul_adj;Á¸Æ;;;;;;;;;;;;;x
 k_civil_seoul;Á¸Æ ü»È;;;;;;;;;;;;;x
 k_civil_seoul_adj;Á¸Æ;;;;;;;;;;;;;x
 k_bulgukto;ˆ´m­ Ñ;;;;;;;;;;;;;x
-k_bulgukto_adj;Bulgukto;;;;;;;;;;;;;x
+k_bulgukto_adj;ˆ´m­ Ñ;;;;;;;;;;;;;x
 k_kaesong;¬1Á;;;;;;;;;;;;;x
-k_kaesong_adj;Kaesong;;;;;;;;;;;;;x
+k_kaesong_adj;¬1Á;;;;;;;;;;;;;x
 k_gaya;¬|Å;;;;;;;;;;;;;x
-k_gaya_adj;Gaya;;;;;;;;;;;;;x
+k_gaya_adj;¬|Å;;;;;;;;;;;;;x
 k_andong;üÈ;;;;;;;;;;;;;x
 k_andong_adj;HÅÙ³;;;;;;;;;;;;;x
 k_pohang;ìÓmÕ;;;;;;;;;;;;;x
