닝우타와 골민 샹기얀 알린

--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -1,5 +1,6 @@
 e_north_korea;Democratic People's Republic of Korea;;;;;;;;;;;;;x
 e_north_korea_adj;North Korean;;;;;;;;;;;;;x
+E_NK;North Korea;;;;;;;;;;;;;x
 e_south_korea;Republic of Korea;;;;;;;;;;;;;x
 e_south_korea_adj;South Korean;;;;;;;;;;;;;x
 e_sinan;Sinan;;;;;;;;;;;;;x
