--- a/Falen/localisation/fal_religions.csv
+++ b/Falen/localisation/fal_religions.csv
@@ -13,5 +13,5 @@ gaian;Gaian;;;;;;;;;;;;;x
 koreanist;Koreanist;;;;;;;;;;;;;x
 juche;Juche;;;;;;;;;;;;;x
 maoist;Maoist;;;;;;;;;;;;;x
-holy_spirit;Holy Spirit;;;;;;;;;;;;;x
+holy_spirit_pagan;Holy Spirit;;;;;;;;;;;;;x
 atomicist;Atomicist;;;;;;;;;;;;;x
