C-8과 울클레이브(임시,테스트바람)

--- a/Falen_Multibyte/localisation/fal_religions.csv
+++ b/Falen_Multibyte/localisation/fal_religions.csv
@@ -13,7 +13,8 @@ gaian;ÇğÅP­;;;;;;;;;;;;;x
 koreanist;kÕm­P­;;;;;;;;;;;;;x
 juche;üÈ´ÌP­;;;;;;;;;;;;;x
 maoist;È¹3ÆP­;;;;;;;;;;;;;x
-holy_spirit;1Á9¸àÂYÅ;;;;;;;;;;;;;x
+holy_spirit_pagan;1Á9¸àÂYÅ;;;;;;;;;;;;;x
+holy_spirit_reformed;1Á9¸P­;;;;;;;;;;;;;x
 atomicist;ĞÆÇP­;;;;;;;;;;;;;x
 authoritarian;kÕm­P­ Œ­ÇüÈXÇ;;;;;;;;;;;;;x
 populist;kÕm­P­ ³ÉüÈXÇ;;;;;;;;;;;;;x
