--- a/Falen_Multibyte/localisation/kingdom_titles.csv
+++ b/Falen_Multibyte/localisation/kingdom_titles.csv
@@ -36,3 +36,9 @@ k_pohang;ìÓmÕ;;;;;;;;;;;;;x
 k_pohang_adj;ìÓmÕ;;;;;;;;;;;;;x
 k_prk;pÈ/ÁxÇü»õ¬TÖm­;;;;;;;;;;;;;x
 k_prk_adj;õ¬TÖm­;;;;;;;;;;;;;x
+k_yanbian;ğÅÀ¼;;;;;;;;;;;;;x
+k_yanbian_adj;ğÅÀ¼;;;;;;;;;;;;;x
+k_jianzhou;t¬üÈ;;;;;;;;;;;;;x
+k_jianzhou_adj;t¬üÈ;;;;;;;;;;;;;x
+k_haixi;tÕÁ;;;;;;;;;;;;;x
+k_haixi_adj;tÕÁ;;;;;;;;;;;;;x
