울클레이브 완료(아마)

--- a/Falen_Multibyte/localisation/fal_religions.csv
+++ b/Falen_Multibyte/localisation/fal_religions.csv
@@ -9,6 +9,8 @@ protestant;¬àÂP­;;;;;;;;;;;;;x
 vajrayana;ğÒ ¼¸Ò ˆ´P­;;;;;;;;;;;;;x
 mechanist;0®Ä¬P­;;;;;;;;;;;;;x
 mahayana;³¹Âˆ´P­;;;;;;;;;;;;;x
+maitreya;ø»u¹…È;;;;;;;;;;;;;x
+bailian;1¼(¸…È;;;;;;;;;;;;;x
 gaian;ÇğÅP­;;;;;;;;;;;;;x
 koreanist;kÕm­P­;;;;;;;;;;;;;x
 juche;üÈ´ÌP­;;;;;;;;;;;;;x
@@ -19,3 +21,9 @@ atomicist;ĞÆÇP­;;;;;;;;;;;;;x
 authoritarian;kÕm­P­ Œ­ÇüÈXÇ;;;;;;;;;;;;;x
 populist;kÕm­P­ ³ÉüÈXÇ;;;;;;;;;;;;;x
 imperial;Èm­m­P­ŒÖ;;;;;;;;;;;;;x
+wanyan;DÆHÅ(Å -Â0¼;;;;;;;;;;;;;x
+aisin_gioro;`ÅàÂ¬|·(Å -Â0¼;;;;;;;;;;;;;x
+nightglow;|Å…ºÄ³;;;;;;;;;;;;;x
+unitary;µÑ|ÇP­;;;;;;;;;;;;;x
+familiar;¬À‘·¬ÈiÕ|ÇP­ŒÖ;;;;;;;;;;;;;x
+c8_religion;(Å¼;;;;;;;;;;;;;x
