--- a/Falen_Multibyte/localisation/enclave_invasion.csv
+++ b/Falen_Multibyte/localisation/enclave_invasion.csv
@@ -1,8 +1,9 @@
-enclave_1;4≠÷¡¿;;;;;;;;;;;;;x
+enclave_1;@4≠÷¡¿;;;;;;;;;;;;;x
 enclave_1_desc;3∆ò≤ 3∆ƒ÷, k’ºƒ≥ »¥Ã–≈ x¨–Ã 0Æt«k’ |«t« |«¥≈¨∞µ¬»≤‰≤. »m≠X« ¨¿å∑‰¥O« ≤l≠X’ò∞ ¨¥πÉ¨ ∆≈t« t«/«∆≈î≤ <’k∏¨¸¨ 4Æ•«, ı¨Ï”|π ê≤Ø‰≤‡¨ i’»≤‰≤.\n≥»X« ¸¨Y’ê«‰¥O« Á¨ ‰¬ÿ’–≈ ‰¥¥≈¨‡¨ t«î≤ l≠‹¬≥X« /«<ªt« ‰≤‹¬ ¿∆¡…x« ∞¨¸¨|∑‡¨ i’»≤‰≤. ¯≠ /«<ªO« 4ª∏≈¨ –πD« X’∆‰≤‡¨ i’»≤‰≤.\n"t« –πt« ‰¥∞π‰≤t∫ ¨«P≠‡¬ ºè∑‰≤. ‰≤‹¬k’àº ºıºk’‰≤. t« –πt« ‰¥∞π‰≤t∫ ¨«P≠‡¬ ºè∑‰≤. 3∆º."\nt«–πt« 4ª®¬ J∑x«¿…, ¥≈¯…¡ ∏∆3∏|”ƒ… É¨x«¿…î≤ ≤l≠ƒ≥ ”E≈`’¬ ∆≈»≈¿…Ãπ 4ª∏≈¨ à¥H≈k’ 0Æ¥∆t« ¨’≥»≤‰≤...;;;;;;;;;;;;;x
 enclave_1_a;k∆x«¿… ®∫tπ†¨¿…Ãπ ¨ê«0Æ 8∫¨π¨ D≈’p≠...;;;;;;;;;;;;;x
 enclave_1_b;4ª∏≈¨ ò«ª∫¥å¨ Ñ¥Ö∫X’‰≤;;;;;;;;;;;;;x
-enclave_3;‹¬ë«X« ]∞,]∞X« ¨«úÕº;;;;;;;;;;;;;x
+enclave_1_b_tooltip;˘≤‡¬O« LÆÌ≤ ®∫|π à¥H≈h’D« ê≤ç∞»≤‰≤.....;;;;;;;;;;;;;x
+enclave_3;@‹¬ë«X« ]∞,]∞X« ¨«úÕº;;;;;;;;;;;;;x
 enclave_3_desc;¨¿t¨ t«ƒ÷–≈ƒ≥ ¥¿D≈®∞O« ≥k’¸ªm≠X« ¯º†— 8¡%∏, ¯≠‰¥–≈ ≥k’ kÕÖ»t’∞¨EÃO« Ùºt»”O∆ »T÷”X« ”åº¯¬¿∆<«k∏ t«¥≈L»‡¨  Ùºt»”î≤ t«¯ª D∆ÃºX’å¨ O∆t’¥»≈‰≤.\nÙºt»”X« »π¿……π l◊›πt«∆X≥ P≠‡¬‹¬ƒ≥î≤ ¥≈†µk’ ‡¬8÷ƒ≥ ‰¥¥≈3∆¿…ª∫k’¥Ã ]∞¨∞‡¨ »¿m∏å¨ /¡úÕ¥ ≥k’¸ªm≠X« ≥µ—9∏ ???O« ¯º†—X« |≈Ãπx«‰¥–≈ ≥k’ »T÷|π /¡∏≈à’‰≤.\n'¯º†— |≈Ãπx«‰¥X« Ñ≈”k’ »Øƒ≥ t«¡¿ƒ≥ Ï≈0ÆLÆ¿…‰≤. ®∫‡¥É¨O« ¨¿t¨ t«»<«k∏ ıºl≠/¥É¨t«‰≤.';;;;;;;;;;;;;x
 enclave_3_a;Ü» ¥ ‰≤!!!!;;;;;;;;;;;;;x
 enclave_3_b;¥∞¨ ¯≠‰¥|«¬ƒ≥ à«¿… J≈O«¨?;;;;;;;;;;;;;x
