--- a/Falen_Multibyte/localisation/faltitles.csv
+++ b/Falen_Multibyte/localisation/faltitles.csv
@@ -31,5 +31,7 @@ d_haenam;Haenam;;;;;;;;;;;;;x
 d_haenam_adj;Haenam;;;;;;;;;;;;;x
 d_jeju;ÈüÈ;;;;;;;;;;;;;x
 d_jeju_adj;Jeju;;;;;;;;;;;;;x
-c_seoul;Seoul;;;;;;;;;;;;;x
-c_seoul_adj;Seoul;;;;;;;;;;;;;x
+d_cheondo;œÌÄ³P­ P­è²;;;;;;;;;;;;;x
+d_cheondo_adj;œÌÄ³P­;;;;;;;;;;;;;x
+c_seoul;Á¸Æ;;;;;;;;;;;;;x
+c_seoul_adj;Á¸Æ;;;;;;;;;;;;;x
