--- a/Falen_Multibyte/localisation/fal_cultures.csv
+++ b/Falen_Multibyte/localisation/fal_cultures.csv
@@ -1,3 +1,6 @@
+south_koreanic;®∞k’x«;;;;;;;;;;;;;x
+north_koreanic;Å¥k’x«;;;;;;;;;;;;;x
+tungusic;A“l≠≥¬x«;;;;;;;;;;;;;x
 yeongnam;∆®∞;;;;;;;;;;;;;x
 honam;8÷®∞;;;;;;;;;;;;;x
 sinan;‡¬H≈;;;;;;;;;;;;;x
