중화민국 국민정부

--- a/Falen/localisation/fal_miscs.csv
+++ b/Falen/localisation/fal_miscs.csv
@@ -8,4 +8,5 @@ GOD_MAITREYA;Maitreya;;;;;;;;;;;;;x
 KINGDOM_PREFIX;Kingdom of;;;;;;;;;;;;;x
 #HOUSE; House;;;;;;;;;;;;;x
 nick_salt_emperor;the Salt Emperor;;;;;;;;;;;;;x
+nationalist_china;Nationalist Government;;;;;;;;;;;;;x
 
