--- a/Falen_Multibyte/localisation/fal_miscs.csv
+++ b/Falen_Multibyte/localisation/fal_miscs.csv
@@ -8,4 +8,5 @@ GOD_MAITREYA;ø»u¹;;;;;;;;;;;;;x
 KINGDOM_PREFIX;UÆm­;;;;;;;;;;;;;x
 #HOUSE; House;;;;;;;;;;;;;x
 nick_salt_emperor;üÅÈ;;;;;;;;;;;;;x
+nationalist_china;m­ü»È´;;;;;;;;;;;;;x
 
