--- a/Falen_Multibyte/localisation/fal_miscs.csv
+++ b/Falen_Multibyte/localisation/fal_miscs.csv
@@ -9,4 +9,12 @@ KINGDOM_PREFIX;UÆm­;;;;;;;;;;;;;x
 #HOUSE; House;;;;;;;;;;;;;x
 nick_salt_emperor;üÅÈ;;;;;;;;;;;;;x
 nationalist_china;m­ü»È´;;;;;;;;;;;;;x
-
+taipei_china;ÀĞtÇ ¼tÇ;;;;;;;;;;;;;x
+nanjing_china;œ°ÕÉ;;;;;;;;;;;;;x
+title_china_emperor;ÍµÑ;;;;;;;;;;;;;x
+e_china_west_governor;ÉĞÆÍÅ³´;;;;;;;;;;;;;x
+e_china;ÉTÖü»m­;;;;;;;;;;;;;x
+china_china;m­ü»È´;Chine;China;;China;;;;;;;;;x
+china_china_full;ÉTÖü»m­;;;;;;;;;;;;;x
+TXT_CHINA;ÉTÖü»m­;;;;;;;;;;x
+empire;m­ü»È´;;;;;;;;;;x
