--- a/Falen/localisation/kingdom_titles.csv
+++ b/Falen/localisation/kingdom_titles.csv
@@ -36,3 +36,5 @@ k_pohang;Pohang;;;;;;;;;;;;;x
 k_pohang_adj;Pohang;;;;;;;;;;;;;x
 k_prk;People's Republic of Korea;;;;;;;;;;;;;x
 k_prk_adj;Republican;;;;;;;;;;;;;x
+k_yanbian;Yanbian;;;;;;;;;;;;;x
+k_yanbian_adj;Yanbian;;;;;;;;;;;;;x
