--- a/Falen/localisation/kingdom_titles.csv
+++ b/Falen/localisation/kingdom_titles.csv
@@ -38,3 +38,11 @@ k_prk;People's Republic of Korea;;;;;;;;;;;;;x
 k_prk_adj;Republican;;;;;;;;;;;;;x
 k_yanbian;Yanbian;;;;;;;;;;;;;x
 k_yanbian_adj;Yanbian;;;;;;;;;;;;;x
+k_jianzhou;Jianzhou;;;;;;;;;;;;;x
+k_jianzhou_adj;Jianzhou;;;;;;;;;;;;;x
+k_haixi;Haixi;;;;;;;;;;;;;x
+k_haixi_adj;Haixi;;;;;;;;;;;;;x
+k_mountain_league;Mountain League;;;;;;;;;;;;;x
+k_mountain_league_adj;Mountain;;;;;;;;;;;;;x
+k_rok_armed_forces;Korean Land Army;;;;;;;;;;;;;x
+k_rok_armed_forces_adj;Military;;;;;;;;;;;;;x
