--- a/Falen_Multibyte/localisation/fal_miscs.csv
+++ b/Falen_Multibyte/localisation/fal_miscs.csv
@@ -10,7 +10,7 @@ KINGDOM_PREFIX;U∆m≠;;;;;;;;;;;;;x
 nick_salt_emperor;¸≈»;;;;;;;;;;;;;x
 nationalist_china;m≠¸ª»è¥;;;;;;;;;;;;;x
 taipei_china;¿–t«†ºt«;;;;;;;;;;;;;x
-nanjing_china;ú∞’…;;;;;;;;;;;;;x
+nanking_china;ú∞’…;;;;;;;;;;;;;x
 title_china_emperor;Õµ—;;;;;;;;;;;;;x
 e_china_west_governor;…–∆Õ≈≥è¥;;;;;;;;;;;;;x
 e_china;…T÷¸ªm≠;;;;;;;;;;;;;x
