--- a/Falen_Multibyte/localisation/faltitles.csv
+++ b/Falen_Multibyte/localisation/faltitles.csv
@@ -13,25 +13,33 @@ e_joseon;p»/¡;;;;;;;;;;;;;x
 e_joseon_adj;p»/¡;;;;;;;;;;;;;x
 e_donghae_adj;Ÿ≥t’;;;;;;;;;;;;;x
 e_donghae_adj;Ÿ≥t’;;;;;;;;;;;;;x
+e_goryeo;‡¨3∏;;;;;;;;;;;;;x
+e_goryeo_adj;‡¨3∏;;;;;;;;;;;;;x
 d_seoul;¡∏∆;;;;;;;;;;;;;x
 d_seoul_adj;¡∏∆;;;;;;;;;;;;;x
-d_gangnam;Gangnam;;;;;;;;;;;;;x
-d_gangnam_adj;Gangnam;;;;;;;;;;;;;x
-d_dongdaemun;Dongdaemun;;;;;;;;;;;;;x
-d_dongdaemun_adj;Dongdaemun;;;;;;;;;;;;;x
-d_seodaemun;Seodaemun;;;;;;;;;;;;;x
-d_dongdaemun_adj;Dongdaemun;;;;;;;;;;;;;x
-d_gaema;Kaema;;;;;;;;;;;;;x
-d_gaema;Kaema;;;;;;;;;;;;;x
-d_pyongyang;Pyongyang;;;;;;;;;;;;;x
-d_pyongyang_adj;Pyongyang;;;;;;;;;;;;;x
-d_sinan;Sinan;;;;;;;;;;;;;x
-d_sinan_adj;Sinan;;;;;;;;;;;;;x
-d_haenam;Haenam;;;;;;;;;;;;;x
-d_haenam_adj;Haenam;;;;;;;;;;;;;x
+d_gangnam;¨®∞;;;;;;;;;;;;;x
+d_gangnam_adj;¨®∞;;;;;;;;;;;;;x
+d_dongdaemun;Ÿ≥≥8ª;;;;;;;;;;;;;x
+d_dongdaemun_adj;Ÿ≥≥8ª;;;;;;;;;;;;;x
+d_seodaemun;¡≥8ª;;;;;;;;;;;;;x
+d_seodaemun_adj;¡≥8ª;;;;;;;;;;;;;x
+d_gaema;¨»π;;;;;;;;;;;;;x
+d_gaema;¨»π;;;;;;;;;;;;;x
+d_pyongyang;…”ë≈;;;;;;;;;;;;;x
+d_pyongyang_adj;…”ë≈;;;;;;;;;;;;;x
+d_sinan;‡¬H≈;;;;;;;;;;;;;x
+d_sinan_adj;‡¬H≈;;;;;;;;;;;;;x
+d_haenam;t’®∞;;;;;;;;;;;;;x
+d_haenam_adj;t’®∞;;;;;;;;;;;;;x
 d_jeju;»¸»;;;;;;;;;;;;;x
-d_jeju_adj;Jeju;;;;;;;;;;;;;x
+d_jeju_adj;»¸»;;;;;;;;;;;;;x
 d_cheondo;úÃƒ≥P≠ P≠Ë≤;;;;;;;;;;;;;x
 d_cheondo_adj;úÃƒ≥P≠;;;;;;;;;;;;;x
+d_incheon;x«úÃ;;;;;;;;;;;;;x
+d_incheon_adj;x«úÃ;;;;;;;;;;;;;x
+d_yeosu;Ï≈¬;;;;;;;;;;;;;x
+d_yeosu_adj;Ï≈¬;;;;;;;;;;;;;x
+d_hanwul;k’∏∆;;;;;;;;;;;;;x
+d_hanwul_adj;k’∏∆;;;;;;;;;;;;;x
 c_seoul;¡∏∆;;;;;;;;;;;;;x
 c_seoul_adj;¡∏∆;;;;;;;;;;;;;x
