--- a/Falen_Multibyte/localisation/kingdom_titles.csv
+++ b/Falen_Multibyte/localisation/kingdom_titles.csv
@@ -42,3 +42,7 @@ k_jianzhou;t¬üÈ;;;;;;;;;;;;;x
 k_jianzhou_adj;t¬üÈ;;;;;;;;;;;;;x
 k_haixi;tÕÁ;;;;;;;;;;;;;x
 k_haixi_adj;tÕÁ;;;;;;;;;;;;;x
+k_mountain_league;°ÀEÅğÅù¹;;;;;;;;;;;;;x
+k_mountain_league_adj;°ÀEÅ;;;;;;;;;;;;;x
+k_rok_armed_forces;³kÕ p­È­Ì;;;;;;;;;;;;;x
+k_rok_armed_forces_adj;p­È­Ì;;;;;;;;;;;;;x
