--- a/Falen/localisation/kingdom_titles.csv
+++ b/Falen/localisation/kingdom_titles.csv
@@ -1,3 +1,5 @@
+k_korea;Korea;;;;;;;;;;;;;x
+k_korea_adj;Korean;;;;;;;;;;;;;x
 k_manchuria;Manchuria;;;;;;;;;;;;;x
 k_manchuria_adj;Manchu;;;;;;;;;;;;;x
 k_liaoning;Liaoning;;;;;;;;;;;;;x
@@ -46,3 +48,13 @@ k_mountain_league;Mountain League;;;;;;;;;;;;;x
 k_mountain_league_adj;Mountain;;;;;;;;;;;;;x
 k_rok_armed_forces;Korean Land Army;;;;;;;;;;;;;x
 k_rok_armed_forces_adj;Military;;;;;;;;;;;;;x
+k_korean_people's_army;조선인민군;;;;;;;;;;;;;x
+k_korean_people's_army_adj;인민군;;;;;;;;;;;;;x
+k_taedong;Taedong;;;;;;;;;;;;;x
+k_taedong_adj;Taedong;;;;;;;;;;;;;x
+k_air_force;Air Force;;;;;;;;;;;;;x
+k_air_force_adj;Aerial;;;;;;;;;;;;;x
+k_hwanghae_party;Hwanghae Labour's Party;;;;;;;;;;;;;x
+k_hwanghae_party_adj;Hwanghae;;;;;;;;;;;;;x
+k_haeju_farm;Haeju Peasants' State;;;;;;;;;;;;;x
+k_haeju_farm_adj;Haeju;;;;;;;;;;;;;x
