--- a/Falen_Multibyte/localisation/fal_cultures.csv
+++ b/Falen_Multibyte/localisation/fal_cultures.csv
@@ -8,6 +8,22 @@ jagang;ê«¨;;;;;;;;;;;;;x
 seoul;¡∏∆;;;;;;;;;;;;;x
 hoseo;8÷¡;;;;;;;;;;;;;x
 gyeonggi;Ã¨0Æ;;;;;;;;;;;;;x
+yeongdong;∆Ÿ≥;;;;;;;;;;;;;x
+yeongseo;∆¡;;;;;;;;;;;;;x
+hwanghae;i÷t’;;;;;;;;;;;;;x
+pyongnam;…”H≈®∞ƒ≥;;;;;;;;;;;;;x
+pyongbuk;…”H≈Å¥ƒ≥;;;;;;;;;;;;;x
+hambuk;h’Ã¨Å¥ƒ≥;;;;;;;;;;;;;x
+hamnam;h’Ã¨®∞ƒ≥;;;;;;;;;;;;;x
+yalu;Ñ≈Ë∏;;;;;;;;;;;;;x
+liaoning;¥∑3∆›≤;;;;;;;;;;;;;x
+jilin;¿…∞π;;;;;;;;;;;;;x
+yantai;∆¿–t«;;;;;;;;;;;;;x
+weihai;Ë∆t«X’t«;;;;;;;;;;;;;x
+qingdao;mŒ‰≤3∆;;;;;;;;;;;;;x
+tsingtao;mŒ‰≤3∆ ≈≥|«x«;;;;;;;;;;;;;x
+sudsee;®∞t’ ≈≥|«x«;;;;;;;;;;;;;x
+japanese;|«¯º;;;;;;;;;;;;;x
 russian;Ï∑‹¬D≈;;;;;;;;;;;;;x
 mongol;Ã∫Ë¨;;;;;;;;;;;;;x
 haixi;t’¡;;;;;;;;;;;;;x
