--- a/Falen_Multibyte/localisation/kingdom_titles.csv
+++ b/Falen_Multibyte/localisation/kingdom_titles.csv
@@ -38,6 +38,8 @@ k_prk;pÈ/ÁxÇü»õ¬TÖm­;;;;;;;;;;;;;x
 k_prk_adj;õ¬TÖm­;;;;;;;;;;;;;x
 k_yanbian;ğÅÀ¼;;;;;;;;;;;;;x
 k_yanbian_adj;ğÅÀ¼;;;;;;;;;;;;;x
+k_pyeongbuk;ÉÓHÅ´Ä³;;;;;;;;;;;;;x
+k_pyeongbuk_adj;ÉÓHÅ´Ä³;;;;;;;;;;;;;x
 k_jianzhou;t¬üÈ;;;;;;;;;;;;;x
 k_jianzhou_adj;t¬üÈ;;;;;;;;;;;;;x
 k_haixi;tÕÁ;;;;;;;;;;;;;x
@@ -46,3 +48,13 @@ k_mountain_league;°ÀEÅğÅù¹;;;;;;;;;;;;;x
 k_mountain_league_adj;°ÀEÅ;;;;;;;;;;;;;x
 k_rok_armed_forces;³kÕ p­È­Ì;;;;;;;;;;;;;x
 k_rok_armed_forces_adj;p­È­Ì;;;;;;;;;;;;;x
+k_korean_people's_army;pÈ/ÁxÇü»p­;;;;;;;;;;;;;x
+k_korean_people's_army_adj;xÇü»p­;;;;;;;;;;;;;x
+k_taedong;³Ù³;;;;;;;;;;;;;x
+k_taedong_adj;³Ù³;;;;;;;;;;;;;x
+k_air_force;õ¬p­;;;;;;;;;;;;;x
+k_air_force_adj;õ¬p­;;;;;;;;;;;;;x
+k_hwanghae_party;iÖtÕÄ³ù²;;;;;;;;;;;;;x
+k_hwanghae_party_adj;iÖtÕ;;;;;;;;;;;;;x
+k_haeju_farm;tÕüÈ ±ü»m­;;;;;;;;;;;;;x
+k_haeju_farm_adj;tÕüÈ;;;;;;;;;;;;;x
