--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -15,6 +15,8 @@ e_donghae_adj;Donghae;;;;;;;;;;;;;x
 e_donghae_adj;Vostochniy;;;;;;;;;;;;;x
 e_goryeo;Goryeo;;;;;;;;;;;;;x
 e_goryeo_adj;Korean;;;;;;;;;;;;;x
+e_korea;Korea;;;;;;;;;;;;;x
+e_korea_adj;Korean;;;;;;;;;;;;;x
 d_seoul;Seoul;;;;;;;;;;;;;x
 d_seoul_adj;Seoul;;;;;;;;;;;;;x
 d_gangnam;Gangnam;;;;;;;;;;;;;x
