--- a/Falen/localisation/kingdom_titles.csv
+++ b/Falen/localisation/kingdom_titles.csv
@@ -48,8 +48,8 @@ k_mountain_league;Mountain League;;;;;;;;;;;;;x
 k_mountain_league_adj;Mountain;;;;;;;;;;;;;x
 k_rok_armed_forces;Korean Land Army;;;;;;;;;;;;;x
 k_rok_armed_forces_adj;Military;;;;;;;;;;;;;x
-k_korean_people's_army;조선인민군;;;;;;;;;;;;;x
-k_korean_people's_army_adj;인민군;;;;;;;;;;;;;x
+k_korean_people's_army;Korean People's Army;;;;;;;;;;;;;x
+k_korean_people's_army_adj;People's Army;;;;;;;;;;;;;x
 k_taedong;Taedong;;;;;;;;;;;;;x
 k_taedong_adj;Taedong;;;;;;;;;;;;;x
 k_air_force;Air Force;;;;;;;;;;;;;x
