--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -43,3 +43,11 @@ d_hanwul;Han'ul;;;;;;;;;;;;;x
 d_hanwul_adj;Han'ul;;;;;;;;;;;;;x
 c_seoul;Seoul;;;;;;;;;;;;;x
 c_seoul_adj;Seoul;;;;;;;;;;;;;x
+c_buyeo;Buyeo;;;;;;;;;;;;;x
+c_buyeo_adj;Buyeo;;;;;;;;;;;;;x
+c_gyuam;Gyuam;;;;;;;;;;;;;x
+c_gyuam_adj;Gyuam;;;;;;;;;;;;;x
+c_hongju;Hongju;;;;;;;;;;;;;x # 홍성
+c_hongju_adj;Hongju;;;;;;;;;;;;;x
+c_yesan;Yesan;;;;;;;;;;;;;x
+c_yesan_adj;Yesan;;;;;;;;;;;;;x
