--- a/Falen_Multibyte/localisation/kingdom_titles.csv
+++ b/Falen_Multibyte/localisation/kingdom_titles.csv
@@ -58,3 +58,17 @@ k_hwanghae_party;iÖtÕÄ³ù²;;;;;;;;;;;;;x
 k_hwanghae_party_adj;iÖtÕ;;;;;;;;;;;;;x
 k_haeju_farm;tÕüÈ ±ü»m­;;;;;;;;;;;;;x
 k_haeju_farm_adj;tÕüÈ;;;;;;;;;;;;;x
+k_samsung;¬ Ì ğÅ)¼;;;;;;;;;;;;;x
+k_samsung_adj;¬ Ì;;;;;;;;;;;;;x
+k_central;ÉYÅ UÆ9¸;;;;;;;;;;;;;x
+k_central_adj;ÉYÅ;;;;;;;;;;;;;x
+k_northern_margraviate;´´ À¼Ì¬9¸;;;;;;;;;;;;;x
+k_northern_margraviate_adj;À¼Ì¬;;;;;;;;;;;;;x
+k_daegu_usa;³l­;;;;;;;;;;;;;x
+k_daegu_usa_adj;DÅTº¬¹tÎ;;;;;;;;;;;;;x
+k_sinuiju_comm;àÂXÇüÈ TÏŒ»;;;;;;;;;;;;;x
+k_sinuiju_comm_adj;TÏŒ»;;;;;;;;;;;;;x
+k_east_navy;Ù³tÕ tÕp­;;;;;;;;;;;;;x
+k_east_navy_adj;tÕp­;;;;;;;;;;;;;x
+k_jinhae;ÄÉtÕ;;;;;;;;;;;;;x
+k_jinhae_adj;ÄÉtÕ;;;;;;;;;;;;;x
