조금 큰 수정

--- a/Falen/localisation/faltitles.csv
+++ b/Falen/localisation/faltitles.csv
@@ -11,7 +11,7 @@ e_yalu;Yalu;;;;;;;;;;;;;x
 e_yalu_adj;Yalu;;;;;;;;;;;;;x
 e_joseon;Joseon;;;;;;;;;;;;;x
 e_joseon_adj;Joseon;;;;;;;;;;;;;x
-e_donghae_adj;Donghae;;;;;;;;;;;;;x
+e_donghae_adj;Donghae Empire;;;;;;;;;;;;;x
 e_donghae_adj;Vostochniy;;;;;;;;;;;;;x
 e_goryeo;Goryeo;;;;;;;;;;;;;x
 e_goryeo_adj;Korean;;;;;;;;;;;;;x
