--- a/Falen/localisation/fal_nicknames.csv
+++ b/Falen/localisation/fal_nicknames.csv
@@ -64,7 +64,7 @@ nick_wonmyeong;Wonmyeong;;;;;;;;;;;;;x #원명
 nick_jeongsim;Jeongsim;;;;;;;;;;;;;x #정심
 #이하 포항왕국 별명
 nick_king_of_steel;the Steel;;;;;;;;;;;;;x #강철왕
-nick_king_of_pabul;Pabul;;;;;;;;;;;;;x #파불왕
+nick_king_of_pabul;Disaster of Buddhists;;;;;;;;;;;;;x #파불왕
 nick_the_revenger;the Revenger;;;;;;;;;;;;;x #복수자
 nick_king_of_zealous;the Zeal;;;;;;;;;;;;;x #독실왕
 nick_king_of_jangsu;the Old;;;;;;;;;;;;;x #장수왕
