--- a/Falen_Multibyte/localisation/fal_nicknames.csv
+++ b/Falen_Multibyte/localisation/fal_nicknames.csv
@@ -64,7 +64,7 @@ nick_wonmyeong;ĞÆ…º;;;;;;;;;;;;;x #ĞÆ…º
 nick_jeongsim;ÈìÂ;;;;;;;;;;;;;x #ÈìÂ
 #tÇXÕ ìÓmÕUÆm­ Ä¼…º
 nick_king_of_steel;¬ Ì;;;;;;;;;;;;;x #¬ ÌUÆ
-nick_king_of_pabul;Óˆ´UÆ;;;;;;;;;;;;;x #Óˆ´UÆ
+nick_king_of_pabul;ˆ´Çä´XÇ ¬ÀàÂ;;;;;;;;;;;;;x #Óˆ´UÆ
 nick_the_revenger;õ¼ÂÇ;;;;;;;;;;;;;x #õ¼ÂÇ
 nick_king_of_zealous;Å³äÂUÆ;;;;;;;;;;;;;x #Å³äÂUÆ
 nick_king_of_jangsu;¥ÇÂUÆ;;;;;;;;;;;;;x #¥ÇÂUÆ
