--- a/Falen_Multibyte/localisation/faltitles.csv
+++ b/Falen_Multibyte/localisation/faltitles.csv
@@ -11,7 +11,7 @@ e_yalu;Ñ≈Ë∏;;;;;;;;;;;;;x
 e_yalu_adj;Ñ≈Ë∏;;;;;;;;;;;;;x
 e_joseon;p»/¡;;;;;;;;;;;;;x
 e_joseon_adj;p»/¡;;;;;;;;;;;;;x
-e_donghae_adj;Ÿ≥t’;;;;;;;;;;;;;x
+e_donghae_adj;Ÿ≥t’ »m≠;;;;;;;;;;;;;x
 e_donghae_adj;Ÿ≥t’;;;;;;;;;;;;;x
 e_goryeo;‡¨3∏;;;;;;;;;;;;;x
 e_goryeo_adj;‡¨3∏;;;;;;;;;;;;;x
