--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -346,13 +346,13 @@ PROV345;Bochon;;;;;;;;;;;;;x
 PROV346;Paegam;;;;;;;;;;;;;x
 PROV347;Sanmjiyon;;;;;;;;;;;;;x
 PROV348;Daehongdan;;;;;;;;;;;;;x
-PROV349;Sudong'gu;;;;;;;;;;;;;x
+PROV349;Sudong;;;;;;;;;;;;;x
 PROV350;Kowon;;;;;;;;;;;;;x
 PROV351;Yodok;;;;;;;;;;;;;x
 PROV352;Kumya;;;;;;;;;;;;;x
 PROV353;Jongpyong;;;;;;;;;;;;;x
 PROV354;Hamju;;;;;;;;;;;;;x
-PROV355;Yong'gwang;;;;;;;;;;;;;x
+PROV355;Oro;;;;;;;;;;;;;x
 PROV356;Hamhung;;;;;;;;;;;;;x
 PROV357;Sinhung;;;;;;;;;;;;;x
 PROV358;Pujon;;;;;;;;;;;;;x
