--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -8,7 +8,7 @@ PROV7;Hadong;;;;;;;;;;;;;x
 PROV8;Jinju;;;;;;;;;;;;;x
 PROV9;Uiryeong;;;;;;;;;;;;;x
 PROV10;Hamyang;;;;;;;;;;;;;x
-PROV11;Tongyeon;;;;;;;;;;;;;x
+PROV11;Tongyeong;;;;;;;;;;;;;x
 PROV12;Haman;;;;;;;;;;;;;x
 PROV13;Gimcheon;;;;;;;;;;;;;x
 PROV14;Gimhae;;;;;;;;;;;;;x
