--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -58,7 +58,7 @@ PROV57;Gwangju;;;;;;;;;;;;;x
 PROV58;Naju;;;;;;;;;;;;;x
 PROV59;Suncheon;;;;;;;;;;;;;x
 PROV60;Jindo;;;;;;;;;;;;;x
-PROV61;Yeongnam;;;;;;;;;;;;;x
+PROV61;Yeong'am;;;;;;;;;;;;;x
 PROV62;Mokpo;;;;;;;;;;;;;x
 PROV63;Sinan;;;;;;;;;;;;;x
 PROV64;Gokseong;;;;;;;;;;;;;x
