--- a/Falen/localisation/fal_nicknames.csv
+++ b/Falen/localisation/fal_nicknames.csv
@@ -13,6 +13,7 @@ nick_yeonsangun;Yeonsangun;;;;;;;;;;;;;x
 nick_jungjong;Jungjong;;;;;;;;;;;;;x
 nick_injong;Injong;;;;;;;;;;;;;x
 nick_myeongjong;Myeongjong;;;;;;;;;;;;;x
+nick_deokheung_daewongun;Deokheung Daewongun;;;;;;;;;;;;;
 nick_seonjo;Seonjo;;;;;;;;;;;;;x
 nick_gwanghaegun;Gwanghaegun;;;;;;;;;;;;;x
 nick_injo;Injo;;;;;;;;;;;;;x
