--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -28,7 +28,7 @@ PROV27;Pohang;;;;;;;;;;;;;x
 PROV28;Yeongcheon;;;;;;;;;;;;;x
 PROV29;Gumi;;;;;;;;;;;;;x
 PROV30;Gunwi;;;;;;;;;;;;;x
-PROV31;Chengsong;;;;;;;;;;;;;x
+PROV31;Cheongsong;;;;;;;;;;;;;x
 PROV32;Yecheon;;;;;;;;;;;;;x
 PROV33;Uiseong;;;;;;;;;;;;;x
 PROV34;Yeongju;;;;;;;;;;;;;x
