--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -50,3 +50,7 @@ d_daegu;ณlญ;;;;;;;;;;;;;x
 d_daegu_adj;ณlญ;;;;;;;;;;;;;x
 d_gwangju;ญüศ;;;;;;;;;;;;;x
 d_gwangju_adj;ญüศ;;;;;;;;;;;;;x
+d_paektu_guard;1ผPด kฮวณ;;;;;;;;;;;;;x
+d_paektu_guard_adj;kฮวณ;;;;;;;;;;;;;x
+d_unitary;ตั|วPญึ;;;;;;;;;;;;;x
+d_unitary_adj;ตั|วPญ;;;;;;;;;;;;;x
