--- a/Falen_Multibyte/localisation/fal_nicknames.csv
+++ b/Falen_Multibyte/localisation/fal_nicknames.csv
@@ -84,11 +84,11 @@ nick_kaesong_guy;¨1¡ ¨¿å∑;;;;;;;;;;;;;x
 nick_iron_lady;†ÃX« Ï≈x«;;;;;;;;;;;;;x
 nick_goja;‡¨ê«;;;;;;;;;;;;;x
 #U≥–∆
-nick_the_shepherd;ë≈XŒ0Æ;;;;;;;;;;;;;x
+nick_the_shepherd;©∫ê«;;;;;;;;;;;;;x
 nick_the_largest_sheep;p– ë≈;;;;;;;;;;;;;x
-nick_the_blind_leading_the_blind;≤<∫ ê«;;;;;;;;;;;;;x
+nick_the_blind_leading_the_blind;•«ÿ≤D« t«D∞î≤ ˘πx«;;;;;;;;;;;;;x
 #p»/¡q»
-nick_ryongdoja_of_the_gentiles;t«)ºx« 9∏ƒ≥ê«;;;;;;;;;;;;;x
+nick_ryongdoja_of_the_gentiles;t«)ºx«‰¥X« 9∏ƒ≥ê«;;;;;;;;;;;;;x
 #∞¿Ÿ≥
 nick_no_jugong;¸»ı¨;;;;;;;;;;;;;x
 nick_gaegogi_jang_gun;¨‡¨0Æ •«p≠;;;;;;;;;;;;;x
