--- a/Falen_Multibyte/localisation/fal_religions.csv
+++ b/Falen_Multibyte/localisation/fal_religions.csv
@@ -1,7 +1,8 @@
 mu_pagan;4»Á;;;;;;;;;;;;;x
 jeju_pagan;¬ä­P­;;;;;;;;;;;;;x
 steel_pagan;ÜĞ ÌP­;;;;;;;;;;;;;x
-red_solar;‰´OÇ ÜĞ‘Å;;;;;;;;;;;;;x
+red_solar_pagan;‰´OÇ ÜĞ‘Å;;;;;;;;;;;;;x
+red_solar_pagan_reformed;‰´OÇ ÜĞ‘Å;;;;;;;;;;;;;x
 cheondo;œÌÄ³P­;;;;;;;;;;;;;x
 marxist;Ñ¹ÜÂ˜É;;;;;;;;;;;;;x
 confucian;/ÇP­;;;;;;;;;;;;;x
