--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -28,7 +28,7 @@ PROV27;ìÓmÕ;;;;;;;;;;;;;x
 PROV28;ÆœÌ;;;;;;;;;;;;;x
 PROV29;l­ø»;;;;;;;;;;;;;x
 PROV30;p­Ç;;;;;;;;;;;;;x
-PROV31;=Ì1Á;;;;;;;;;;;;;x
+PROV31;­Ì¡Á;;;;;;;;;;;;;x
 PROV32;ÆœÌ;;;;;;;;;;;;;x
 PROV33;XÇ1Á;;;;;;;;;;;;;x
 PROV34;ÆüÈ;;;;;;;;;;;;;x
@@ -37,7 +37,7 @@ PROV36;ÆU³;;;;;;;;;;;;;x
 PROV37;Æ‘Å;;;;;;;;;;;;;x
 PROV38;¸ÆÄÉ;;;;;;;;;;;;;x
 PROV39;	´TÖ;;;;;;;;;;;;;x
-PROV40;¸Æ9¸;;;;;;;;;;;;;x
+PROV40;¸Æ‰¹;;;;;;;;;;;;;x
 PROV41;iÕœÌ;;;;;;;;;;;;;x
 PROV42;`Îá¬;;;;;;;;;;;;;x
 PROV43;ÁÀüÈ;;;;;;;;;;;;;x
@@ -58,7 +58,7 @@ PROV57;­üÈ;;;;;;;;;;;;;x
 PROV58;˜°üÈ;;;;;;;;;;;;;x
 PROV59;ÂœÌ;;;;;;;;;;;;;x
 PROV60;ÄÉÄ³;;;;;;;;;;;;;x
-PROV61;Æ¨°;;;;;;;;;;;;;x
+PROV61;ÆTÅ;;;;;;;;;;;;;x
 PROV62;©ºìÓ;;;;;;;;;;;;;x
 PROV63;àÂHÅ;;;;;;;;;;;;;x
 PROV64;á¬1Á;;;;;;;;;;;;;x
@@ -88,7 +88,7 @@ PROV87;„ÇäÂ;;;;;;;;;;;;;x
 PROV88;¥ÇÂ;;;;;;;;;;;;;x
 PROV89;uÇ°À;;;;;;;;;;;;;x
 PROV90;ÈüÈ;;;;;;;;;;;;;x
-PROV91;ÀÉœ°;;;;;;;;;;;;;x
+PROV91;ÄÉHÅ;;;;;;;;;;;;;x
 PROV92;4»üÈ;;;;;;;;;;;;;x
 PROV93;4»HÅ;;;;;;;;;;;;;x
 PROV94;­°À;;;;;;;;;;;;;x
