조공국전쟁명분 제한 & 계룡 병원 버그 해결

--- a/Falen/localisation/acc.csv
+++ b/Falen/localisation/acc.csv
@@ -1,2 +1,4 @@
 holy_war_cooldown;Recent Holy War;;;;;;;;;;;;;x
 holy_war_cooldown_ctt;Gain the Recent Holy War modifier.\n;;;;;;;;;;;;;x
+tributary_war_cooldown;Recent Tributary War;;;;;;;;;;;;;x
+tributary_war_cooldown_ctt;Gain the Recent Tributary War modifier.\n;;;;;;;;;;;;;x
